ExportManager: delay copy to clipboard

Until a window is focused.

BUG: 421974